[package]
name = "mem-analyser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
probe-rs = "0.11.0"
probe-rs-rtt = "0.11.0"
object = "0.27.1"
serde = "1.0.117"
serde_json = "1.0"
text_io = "0.1.9"
clap = "2.34.0"
serde-hex = "0.1.0"
regex = "1.5.4"
thiserror = "1.0.30"
bitfield = "0.13.2"